# master-slave-surgical-teleoperation

./: README.md
Hardware/: MasterCode.ino  SlaveCode.ino
Sim1/: CMakeLists.txt  package.xml
Sim1/launch/: display.launch.py
Sim1/scripts/: dashboard_node.py  marker_control.py  teleop_bridge.py
Sim1/urdf/: robot.urdf.xacro
Sim2/: README.md
Sim2/src/zayan/: CMakeLists.txt  package.xml
Sim2/src/zayan/config/: arm_3dof_controllers.yaml
Sim2/src/zayan/launch/: display_3dof.launch.py  master_slave.launch.py
Sim2/src/zayan/rviz/: display_3dof.rviz
Sim2/src/zayan/scripts/: master_slave_ik_node.py
Sim2/src/zayan/urdf/: arm_3dof_gripper.xacro
